# mcupico

./: CMakeLists.txt  README.md
include/mcupico/74/: hc165.h  hc595.h
include/mcupico/flash/: w25qxx.h
src/74/: hc165.cpp  hc595.cpp
src/flash/: w25qxx.cpp
